--- a/website/app/application/core/projects/project/processes/template.html
+++ b/website/app/application/core/projects/project/processes/template.html
@@ -61,8 +61,8 @@
                                         <i class="fa fa-fw fa-star-o pull-right"></i>
                                     </div>
                                     <div class="row">
-                                        <button class="btn btn-info" ng-click="ctrl.viewSetUp(template)">
-                                            <i class="fa fa-fw fa-gear"></i>SetUp
+                                        <button class="btn btn-info" ng-click="ctrl.viewSetup(template)">
+                                            <i class="fa fa-fw fa-gear"></i>Setup
                                         </button>
                                         <button class="btn btn-info" ng-click="ctrl.openPrefill(template)"><i
                                                 class="fa fa-fw fa-pencil-square-o"></i>Pre-fill
@@ -94,8 +94,8 @@
                                 </div>
                                 <div class="col-xs-5">
                                     <div class="row">
-                                        <button class="btn btn-info" ng-click="ctrl.viewSetUp(template)">
-                                            <i class="fa fa-fw fa-gear"></i>SetUp
+                                        <button class="btn btn-info" ng-click="ctrl.viewSetup(template)">
+                                            <i class="fa fa-fw fa-gear"></i>Setup
                                         </button>
                                         <button class="btn btn-info" ng-click="ctrl.openPrefill(template)"><i
                                                 class="fa fa-fw fa-pencil-square-o"></i>Pre-fill
@@ -128,8 +128,8 @@
                                 </div>
                                 <div class="col-xs-5">
                                     <div class="row">
-                                        <button class="btn btn-info" ng-click="ctrl.viewPrefilledSetUp(template)">
-                                            <i class="fa fa-fw fa-gear"></i>SetUp
+                                        <button class="btn btn-info" ng-click="ctrl.viewPrefilledSetup(template)">
+                                            <i class="fa fa-fw fa-gear"></i>Setup
                                         </button>
                                     </div>
                                 </div>
