Get userguide working. Remove reference to function that doesn't do what it describes and is only used in one spot.

--- a/website/app/application/core/projects/project/help/userguide.html
+++ b/website/app/application/core/projects/project/help/userguide.html
@@ -65,7 +65,7 @@
                                 <img class="img-responsive"
                                      src="assets/img/userguide/user-start/upload-files-ustart.png">
                             </div>
-                            <b><a ng-click="userguide.goTo('createSample')">Create Sample</a></b>
+                            <b><a>Create Sample</a></b>
 
                             <p>Under the samples panel click on <i class="fa fa-fw fa-plus"></i> icon and fill in the
                                 details of the sample and hit
