--- a/website/app/index.html
+++ b/website/app/index.html
@@ -236,5 +236,6 @@
 <script src="application/core/projects/project/home/directives/display-sample-controller.js"></script>
 <script src="application/core/components/properties/partials/display-process-name-directive.js"></script>
 <script src="application/core/projects/project/processes/edit/edit-process-controller.js"></script>
+<script src="application/core/projects/project/processes/edit/process-edit-service.js"></script>
 </body>
 </html>
