--- a/website/app/index.html
+++ b/website/app/index.html
@@ -238,5 +238,6 @@
 <script src="application/core/projects/project/processes/edit/edit-process-controller.js"></script>
 <script src="application/core/projects/project/processes/edit/process-edit-service.js"></script>
 <script src="application/services/mcmodal/existing-process-controller.js"></script>
+<!--<script src="application/core/projects/project/processes/create/existing-process-service.js"></script>-->
 </body>
 </html>
