--- a/website/app/application/core/projects/project/home/directives/display-process.html
+++ b/website/app/application/core/projects/project/home/directives/display-process.html
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="process headings">Samples:</div>
-                <div class="row" ng-repeat="sample in selected.item.samples">
+                <div class="row" ng-repeat="sample in selected.item.input_samples">
                     <div style="padding-left: 10px;padding-bottom: 20px;;line-height: 5px;">
                         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                         <img src="assets/img/splash/sample_icon.png" style="height: 40px;padding-bottom: 10px;">
@@ -56,10 +56,10 @@
             <div class="col-xs-12">
                 <div class="process headings">Files:</div>
                 <div>Files Used:</div>
-                <div ng-if="selected.item.files_used.length === 0">
+                <div ng-if="selected.item.input_files.length === 0">
                      --None--<br>
                 </div>
-                <div ng-repeat="attachment in selected.item.files_used">
+                <div ng-repeat="attachment in selected.item.input_files">
                     <div style="padding-left: 10px;padding-bottom: 20px;;line-height: 5px;">
                         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                         <img src="assets/img/splash/file_icon.png" style="height: 40px;padding-bottom: 10px;">
@@ -72,10 +72,10 @@
                 </div>
 
                 <div>Files Produced:</div>
-                <div ng-if="selected.item.files_produced.length === 0">
+                <div ng-if="selected.item.output_files.length === 0">
                     --None--
                 </div>
-                <div ng-repeat="attachment in selected.item.files_produced">
+                <div ng-repeat="attachment in selected.item.output_files">
                     <div style="padding-left: 10px;padding-bottom: 20px;;line-height: 5px;">
                         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                         <img src="assets/img/splash/file_icon.png" style="height: 40px;padding-bottom: 10px;">
