--- a/website/app/application/core/projects/project/project.html
+++ b/website/app/application/core/projects/project/project.html
@@ -7,11 +7,11 @@
     <div class="project-content">
         <div ng-if="project.loaded" class="row">
             <div ng-class="{'col-sm-12': project.isExpanded('help'), 'col-sm-4': !project.isExpanded('help') && project.showHelp()}"
-                 ng-show="project.showHelp()">
+                 ng-if="project.showHelp()">
                 <userguide></userguide>
             </div>
             <div ng-class="{'col-sm-8': project.showHelp(), 'col-sm-12': !project.showHelp()}"
-                 ng-show="!project.isExpanded('help')">
+                 ng-if="!project.isExpanded('help')">
                 <div ui-view></div>
             </div>
         </div>
