css process page layout

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -33,6 +33,7 @@
 
     <!-- Application style sheet -->
     <link href="assets/css/style-3.css" rel="stylesheet">
+    <link href="index/index.css" rel="stylesheet">
     <link href="application/core/projects/project/project.css" rel="stylesheet">
     <link href="application/core/projects/project/files/files.css" rel="stylesheet">
     <!-- endbuild -->
