--- a/website/app/application/core/projects/project/processes/list.html
+++ b/website/app/application/core/projects/project/processes/list.html
@@ -1,15 +1,15 @@
 <div class="row">
-    <div class="col-xs-4 card card-dark card-left card-side-bar">
+    <div class="col-xs-3 card  card-left card-side-bar">
         <div class="row">
             <div class="card-header text-center">
-                <button ng-click="ctrl.chooseTemplate()"
-                        class="btn-details-container btn-process btn btn-default">
-                    create
-                </button>
+                <!--<button ng-click="ctrl.chooseTemplate()"-->
+                        <!--class="btn-details-container btn-process btn btn-default">-->
+                    <!--create-->
+                <!--</button>-->
             </div>
         </div>
 
-        <ul ng-if="ctrl.processes.length !== 0" class="list-group">
+        <ul ng-if="ctrl.processes.length !== 0" class="list-group" >
             <li class="list-group-item pointer"
                 ng-repeat="p in ctrl.processes | orderBy: 'name'"
                 ng-class="{active: ctrl.current.id === p.id}"
@@ -27,7 +27,6 @@
                 </div>
             </li>
         </ul>
-
         <h4 ng-if="ctrl.processes.length === 0" class="text-center text-uppercase">
             - No Processes -
         </h4>
