--- a/website/app/index/navbar.html
+++ b/website/app/index/navbar.html
@@ -16,13 +16,13 @@
         <div class="collapse navbar-collapse">
             <ul ng-show="email_address" class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="large-text pointer"
+                    <a class="no-bold pointer"
                        ng-click="toggleHelp()">
                         Help
                     </a>
                 </li>
                 <li class="dropdown divider">
-                    <a class="dropdown-toggle pointer large-text" data-toggle="dropdown">
+                    <a class="dropdown-toggle pointer no-bold" data-toggle="dropdown">
                         <i class="fa fa-fw fa-user space-right"></i>{{email_address}}
                         <span class="caret caret-light"></span>
                     </a>
