--- a/website/app/application/core/projects/project/processes/list.html
+++ b/website/app/application/core/projects/project/processes/list.html
@@ -1,29 +1,32 @@
-<div class="row">
-    <div class="col-xs-3 card  card-left card-side-bar">
+<div class="row main">
+    <div class="col-xs-3  sidebar">
         <div class="row">
-            <div class="card-header text-center">
-                <!--<button ng-click="ctrl.chooseTemplate()"-->
-                        <!--class="btn-details-container btn-process btn btn-default">-->
-                    <!--create-->
-                <!--</button>-->
+            <div class="col-sm-12">
+                <a class="pull-right" ng-click="ctrl.chooseTemplate()">Create New Process</a>
+            </div>
+        </div><br>
+        <div class="row">
+            <div class="col-sm-12">
+                <a class="pull-right text-muted padding-left-15">Samples</a>
+                <a class="pull-right text-muted padding-left-15">Processes</a>
+                <a class="pull-right ">All</a>
             </div>
         </div>
-
+        <div class="row">
+            <div class="col-sm-12">
+                <input placeholder="Search all..." class="form-control" ng-model="search">
+            </div>
+        </div>
         <ul ng-if="ctrl.processes.length !== 0" class="list-group" >
-            <li class="list-group-item pointer"
+            <li class="list-group-item pointer no-padding no-position"
                 ng-repeat="p in ctrl.processes | orderBy: 'name'"
                 ng-class="{active: ctrl.current.id === p.id}"
                 ng-click="ctrl.viewProcess(p)">
-                <b class="list-group-item-heading">{{p.name}}</b>
-
-                <div class="truncate-text small" ta-bind ng-model="p.what"></div>
-                <div class="row small" style="padding-top: 5px;">
-                    <span class="space-left">
-                        <i class="fa fa-fw fa-cubes sample"></i>{{p.samples.length}}
-                    </span>
-                    <span class="space-left">
-                        <i class="fa fa-fw fa-files-o file"></i>{{p.input_files.length+p.output_files.length}}
-                    </span>
+                <p class="heading">{{p.name}}</p>
+                <div class="text-muted truncate-text" ta-bind ng-model="p.what"></div>
+                <div class="row counts">
+                    <span><i class="fa fa-fw fa-cubes sample"></i>{{p.samples.length}}</span>
+                    <span class="padding-left-15"><i class="fa fa-fw fa-files-o file"></i>{{p.input_files.length+p.output_files.length}}</span>
                 </div>
             </li>
         </ul>
@@ -31,7 +34,7 @@
             - No Processes -
         </h4>
     </div>
-    <div class="col-xs-8 card-right no-padding">
+    <div class="col-xs-9 no-padding">
         <div ui-view></div>
     </div>
 </div>
