--- a/website/app/application/core/projects/project/processes/view.html
+++ b/website/app/application/core/projects/project/processes/view.html
@@ -1,33 +1,28 @@
-<div class="details-main-content">
-    <h3>{{view.process.name}}</h3>
+<div class="row detail-content">
+    <h3 class="h3custom">{{view.process.name}}</h3>
+    <ul class="row text-light list-inline">
+        <li><i class="fa fa-calendar"></i>{{view.process.birthtime | toDateString}}</li>
+        <li><i class="fa fa-user"></i>{{view.process.owner}}</li>
+        <li><i class="fa fa-file"></i>
+            <span ng-if="view.process.does_transform">{{view.process.process_name}} (Transforms)</span>
+            <span ng-if="!view.process.does_transform">{{view.process.process_name}}  (Does not Transform)</span></li>
+        <li class="pull-right">
+            <button class="btn btn-info">Edit</button>
+            <button class="btn btn-danger">Delete</button>
+        </li>
+    </ul>
+    <br><br>
 
-    <div class="row" style="padding: 10px;color: #C0C0C0">
-        {{view.process.birthtime | toDateString}}
-        <button ng-click="view.editProvenance()"
-                class="pull-right btn-details-container btn btn-default btn btn-cancel">
-            Edit
-        </button>
-    </div>
     <div class="row">
-        <div class="row">
-            <div class="col-xs-8">
-                <div class="process headings">Details:</div>
+        <h4 class="h4custom">Details</h4>
 
-                <div class="row"><b>Description about process:</b> <br>
-                    {{view.process.what}}
-                    <div ng-if="current.what === ''">--None--</div>
-                    <div class="row"><b>Reason you performed the process:</b><br>
-                        {{view.process.why}}
-                        <div ng-if="view.process.why === ''">--None--</div>
-
-                        <div class="row"><b>Owner: </b>{{view.process.owner}}</div>
-                        <div class="row"><b>Does Transform: </b>{{view.process.does_transform}}</div>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="row">
-            <detail-tabs item="view.process"></detail-tabs>
+            <div class="col-xs-2 text-light no-padding">Description about the process</div>
+            <div class="col-xs-10 description">{{view.process.what}}</div>
         </div>
+    </div>
+    <br>
+    <div class="row">
+        <detail-tabs item="view.process"></detail-tabs>
     </div>
 </div>
