Add mtime to process information displayed in list.

--- a/website/app/application/core/projects/project/processes/list.html
+++ b/website/app/application/core/projects/project/processes/list.html
@@ -24,6 +24,7 @@
                     <span class="space-left">
                         <i class="fa fa-fw fa-files-o file"></i>{{p.input_files.length+p.output_files.length}}
                     </span>
+                    <span class="pull-right">{{p.mtime | toDateString}}</span>
                 </div>
             </li>
         </ul>
