samples page layout

--- a/website/app/application/core/projects/project/processes/list.html
+++ b/website/app/application/core/projects/project/processes/list.html
@@ -1,4 +1,4 @@
-<div class="row main">
+<div class="row">
     <div class="col-xs-3  sidebar">
         <div class="row">
             <div class="col-sm-12">
