--- a/website/app/application/core/projects/project/home/home.html
+++ b/website/app/application/core/projects/project/home/home.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row padding-top-20">
     <div class="col-xs-12 no-padding">
         <ul class="list-inline text-center">
             <li class="pull-left">
