--- a/website/app/application/core/projects/project/samples/edit.html
+++ b/website/app/application/core/projects/project/samples/edit.html
@@ -1,18 +1,22 @@
-<div class="row">
-    <div class="col-xs-12 card card-right">
-        <h2 class="sample">{{ctrl.sample.name}}</h2>
+<div class="row detail-content">
+    <h3 class="h3custom">{{ctrl.sample.name}}</h3>
+    <ul class="row text-light list-inline">
+        <li><i class="fa fa-calendar"></i>{{ctrl.sample.birthtime | toDateString}}</li>
+        <li><i class="fa fa-user"></i>{{ctrl.sample.owner}}</li>
+    </ul>
+    <br><br>
+
+    <div class="row">
+        <h4 class="h4custom">Details</h4>
 
         <div class="row">
-            <div class="col-xs-12">
-                <h4 class="text-uppercase section">Details</h4>
+            <div class="col-xs-2 text-light no-padding">Description about the sample</div>
+            <div class="col-xs-10 description">{{ctrl.sample.description}}</div>
+        </div>
+    </div>
+    <br>
 
-                <div class="row"><b>Name: </b>{{ctrl.sample.name}} <br></div>
-                <div class="row"><b>Owner:</b> {{ctrl.sample.owner}} <br></div>
-                <div class="row"><b>Description: </b><br>{{ctrl.sample.description}}</div>
-            </div>
-        </div>
-        <div class="row">
-            <detail-tabs item="ctrl.sample"></detail-tabs>
-        </div>
+    <div class="row">
+        <detail-tabs item="ctrl.sample"></detail-tabs>
     </div>
 </div>
