--- a/website/app/application/core/projects/project/home/home.html
+++ b/website/app/application/core/projects/project/home/home.html
@@ -1,5 +1,5 @@
 <div class="row padding-top-20">
-    <div class="col-xs-12 no-padding">
+    <div class="col-xs-12">
         <ul class="list-inline text-center">
             <li class="pull-left">
                 <div class="btn-group">
