Add take-parent-height class to inhert parent height.

--- a/website/app/application/core/projects/project/processes/list.html
+++ b/website/app/application/core/projects/project/processes/list.html
@@ -1,5 +1,5 @@
-<div class="row">
-    <div class="col-xs-3  sidebar">
+<div class="row take-parent-height">
+    <div class="col-xs-3  sidebar take-parent-height">
         <div class="row">
             <div class="col-sm-12">
                 <a class="pull-right" ng-click="ctrl.chooseTemplate()">Create New Process</a>
@@ -34,7 +34,7 @@
             - No Processes -
         </h4>
     </div>
-    <div class="col-xs-9 no-padding">
-        <div ui-view></div>
+    <div class="col-xs-9 no-padding take-parent-height">
+        <div ui-view class="take-parent-height"></div>
     </div>
 </div>
