--- a/website/app/application/core/projects/project/project.html
+++ b/website/app/application/core/projects/project/project.html
@@ -13,7 +13,7 @@
             </div>
             <div class="no-padding" ng-class="{'col-sm-8': project.showHelp(), 'col-sm-12': !project.showHelp()}"
                  ng-if="!project.isExpanded('help')">
-                <div ui-view></div>
+                <div ui-view class="child-div-selector" ng-style="{height: project.windowHeight}"></div>
             </div>
         </div>
     </div>
