Samples now works with separate scrollbars.

--- a/website/app/application/core/projects/project/samples/samples.html
+++ b/website/app/application/core/projects/project/samples/samples.html
@@ -1,5 +1,5 @@
-<div class="row">
-    <div class="col-xs-3 sidebar">
+<div class="row take-parent-height">
+    <div class="col-xs-3 sidebar take-parent-height">
         <!--<div class="row">-->
             <!--<div class="card-header text-center">-->
                 <!--<button ng-click="ctrl.createSample()"-->
@@ -57,8 +57,8 @@
             No Samples
         </h4>
     </div>
-    <div class="col-xs-9 no-padding">
-        <div ui-view></div>
+    <div class="col-xs-9 no-padding take-parent-height">
+        <div class="take-parent-height" ui-view></div>
     </div>
 </div>
 
