--- a/website/app/application/core/projects/project/samples/samples.html
+++ b/website/app/application/core/projects/project/samples/samples.html
@@ -35,22 +35,13 @@
                 <div class="text-muted truncate-text">{{s.description}}</div>
                 <div class="row counts">
                     <span><i data-placement="right" data-toggle="tooltip" title="Transformations"
-                             class="fa fa-fw fa-star" style="color: #ff5a60;"></i>{{s.property_sets.length}}</span>
+                             class="fa fa-fw fa-flask" style="color: #ff5a60;"></i>{{s.property_sets.length - 1}}</span>
                     <span class="padding-left-15"><i data-placement="right" data-toggle="tooltip" title="Files"
                                                      class="fa fa-fw fa-files-o file"></i>{{s.linked_files.length}}  </span>
                     <span class="padding-left-15"><composition properties="s.properties"></composition></span>
                     <span class="pull-right"><i data-placement="right" data-toggle="tooltip" title="Owner"
                                                 class="fa fa-fw fa-user"></i>{{s.owner}}</span>
                 </div>
-                <!--<div class="row small" style="padding-top: 5px;">-->
-                    <!--<span class="space-left"><i data-placement="right" data-toggle="tooltip" title="Transformations"-->
-                                                <!--class="fa fa-fw fa-star" style="color: #ff5a60;"></i>{{s.property_sets.length}}</span>-->
-                    <!--<span class="space-left"><i data-placement="right" data-toggle="tooltip" title="Files"-->
-                                                <!--class="fa fa-fw fa-files-o file"></i>{{s.linked_files.length}}    </span>-->
-                    <!--<span class="space-left"><composition properties="s.properties"></composition></span>-->
-                    <!--<span class="space-left  pull-right"><i data-placement="right" data-toggle="tooltip" title="Owner"-->
-                                                            <!--class="fa fa-fw fa-user"></i>{{s.owner}} </span>-->
-                <!--</div>-->
             </li>
         </ul>
         <h4 ng-if="ctrl.samples.length === 0" class="text-center text-uppercase">
