--- a/website/app/application/core/projects/project/processes/view.html
+++ b/website/app/application/core/projects/project/processes/view.html
@@ -8,8 +8,12 @@
             <span ng-if="view.process.does_transform">{{view.process.process_name}} (Transforms)</span>
             <span ng-if="!view.process.does_transform">{{view.process.process_name}}  (Does not Transform)</span></li>
         <li class="pull-right">
-            <button class="btn btn-info">Edit</button>
-            <button class="btn btn-danger">Delete</button>
+            <button class="btn btn-info">Create From Process</button>
+            <a class="btn btn-info"
+               ui-sref="projects.project.processes.edit({process_id: view.process.id})">
+                Edit
+            </a>
+            <button ng-if="false" class="btn btn-danger">Delete</button>
         </li>
     </ul>
     <br><br>
