Add support for creating another process that is similar to the one just created.

--- a/website/app/application/core/projects/project/processes/create/create.html
+++ b/website/app/application/core/projects/project/processes/create/create.html
@@ -43,6 +43,12 @@
                         </button>
                     </li>
                     <li>
+                        <button ng-click="ctrl.submitAndAnother()"
+                                class="btn btn-default btn-info">
+                            Submit And Another
+                        </button>
+                    </li>
+                    <li>
                         <button ng-click="ctrl.cancel()"
                                 class="btn btn-default btn-danger">
                             Cancel
