--- a/website/app/application/core/projects/project/processes/display-image-tab.html
+++ b/website/app/application/core/projects/project/processes/display-image-tab.html
@@ -1,10 +1,11 @@
-<div ng-if="ctrl.sampleObj.linked_files.length !== 0">
+<div ng-if="ctrl.sample.linked_files.length !== 0">
+    <b>Image files:</b>
     <span ng-repeat="img in ctrl.images(ctrl.sample.linked_files) | first:3">
         <img class="img-thumbnail" height="100" width="100"
-             ng-src={{ctrl.fileSrc(img.datafile_id)}}>
+             ng-src={{ctrl.fileSrc(img.id)}}>
     </span>
 
-    <div ng-if="ctrl.sample.linked_files.length > 3">
+    <div ng-if="ctrl.sample.linked_files.length > 1">
         ... more ({{ctrl.sample.linked_files.length - 3}}) files
     </div>
 </div>
