--- a/website/app/application/core/projects/project/processes/display-image-tab.html
+++ b/website/app/application/core/projects/project/processes/display-image-tab.html
@@ -1,4 +1,4 @@
-<div ng-if="ctrl.sampleObj.linked_files.length !== 0">
+<div ng-if="ctrl.sample.linked_files.length !== 0">
     <span ng-repeat="img in ctrl.images(ctrl.sample.linked_files) | first:3">
         <img class="img-thumbnail" height="100" width="100"
              ng-src={{ctrl.fileSrc(img.datafile_id)}}>
