file page updates

--- a/website/app/application/core/projects/project/files/dir-controls.html
+++ b/website/app/application/core/projects/project/files/dir-controls.html
@@ -1,6 +1,6 @@
 <ul class="list-inline no-bottom-margin">
     <li>
-        <h3 class="file-color">
+        <h3 class="h3custom">
             <i class="fa fa-fw fa-folder-open"></i> {{ctrl.dir.data.name}}
         </h3>
     </li>
