--- a/website/app/application/core/projects/project/files/dir.html
+++ b/website/app/application/core/projects/project/files/dir.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row  detail-content">
     <div class="col-xs-12 card card-right">
         <dir-controls dir="ctrl.dir"></dir-controls>
         <dir-overview dir="ctrl.dir" project="ctrl.project"></dir-overview>
