--- a/website/app/application/core/projects/project/files/all.html
+++ b/website/app/application/core/projects/project/files/all.html
@@ -1,5 +1,5 @@
-<div class="row">
-    <div class="col-xs-3 sidebar">
+<div class="row take-parent-height">
+    <div class="col-xs-3 sidebar take-parent-height">
         <div class="row">
             <h4 class="file-color text-uppercase text-center">file tree</h4>
         </div>
@@ -28,7 +28,7 @@
             </div>
         </div>
     </div>
-    <div class="col-xs-9 no-padding">
-        <div ui-view></div>
+    <div class="col-xs-9 no-padding take-parent-height">
+        <div ui-view class="take-parent-height"></div>
     </div>
 </div>
