--- a/website/app/application/directives/display-file-contents.html
+++ b/website/app/application/directives/display-file-contents.html
@@ -1,7 +1,7 @@
-<div class="col-xs-12" ng-switch="view.fileType">
+<div ng-switch="view.fileType">
     <div ng-switch-when="image">
-        <img class="img-responsive center-block col-xs-8"
-             ng-src="{{view.fileSrc}}">
+        <a data-toggle="modal" data-target="#myModal"><img class="col-xs-3 no-padding img-responsive center-block"
+                                                           ng-src="{{view.fileSrc}}"> </a>
     </div>
     <div ng-switch-when="pdf">
         <div class="embed-responsive embed-responsive-4by3">
@@ -12,6 +12,9 @@
     </div>
     <div ng-switch-when="xls">
         <span><i class="fa fa-fw fa-file-excel-o"></i>Download the excel file</span>
+    </div>
+    <div ng-switch-when="binary">
+        <span><i class="fa fa-fw fa-file-o"></i>Binary file cannot be displayed</span>
     </div>
     <div ng-switch-default>
         <div ng-if="view.file.size <= 10000"
@@ -27,6 +30,24 @@
                 <i class="fa fa-ban fa-stack-2x text-danger"></i>
             </span>
             File too big to display
+        </div>
+    </div>
+</div>
+
+<div id="myModal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">×</button>
+                <h3 class="modal-title">{{view.file.name}}</h3>
+            </div>
+            <div class="modal-body">
+                <img class="no-padding img-responsive center-block"
+                     ng-src="{{view.fileSrc}}">
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
         </div>
     </div>
 </div>
