--- a/website/app/application/core/projects/project/project-nav-bar.html
+++ b/website/app/application/core/projects/project/project-nav-bar.html
@@ -50,7 +50,7 @@
             </a>
         </li>
         <li role="presentation" ui-sref-active="active">
-            <a ui-sref="projects.project.reviews"
+            <a ui-sref="projects.project.reviews.list"
                ui-sref-opts="{reload: true}"
                ng-click="navbar.clearSearch()"
                class="pointer">
