--- a/website/app/application/core/projects/project/reviews/create.html
+++ b/website/app/application/core/projects/project/reviews/create.html
@@ -1,31 +1,31 @@
-<div class="details-main-content">
+<div class="row detail-content">
     <form name="createReviewForm" novalidate>
         <div class="row" style="color: #d3d3d3;">
-            {{today.toString()}}
+            {{ctrl.today.toString()}}
         </div>
         <div class="row">
             <div class="col-xs-4">
                 <div class="headings">Assign To</div>
                 <div class="row">
-                    <select ng-change="addUser()" name="reviewer" ng-model="selectedUser"
+                    <select ng-change="ctrl.addUser()" name="reviewer" ng-model="ctrl.selectedUser"
                             data-placeholder="Choose Assignee"
                             class="form-control" required>
-                        <option ng-repeat="user in users">{{ user }}</option>
+                        <option ng-repeat="user in ctrl.users">{{ user }}</option>
                     </select>
 
-                    <div ng-if="(createReviewForm.$submitted || createReviewForm.reviewer.$touched) && (model.assigned_to.length < 1)"
+                    <div ng-if="(createReviewForm.$submitted || createReviewForm.reviewer.$touched) && (ctrl.model.assigned_to.length < 1)"
                          ng-messages="createReviewForm.reviewer.$error" class="errors">
                         <div ng-message="required">Please choose at least one user.</div>
                     </div>
                 </div>
                 <br>
 
-                <div ng-repeat="each_user in model.assigned_to">
+                <div ng-repeat="each_user in ctrl.model.assigned_to">
                   <span class="fa-stack fa-lg">
                 <i style="color: #C0C0C0" class="fa fa-circle fa-stack-2x"></i>
                 <i style="color: white;" class="fa fa-user fa-stack-1x"></i>
                 </span>
-                    <span class="who"> {{each_user}}</span> <i ng-click="removeUser(each_user)"
+                    <span class="who"> {{each_user}}</span> <i ng-click="ctrl.removeUser(each_user)"
                                                                style="padding-left: 30px;"
                                                                class="fa fa-fw fa-close pointer"></i>
                 </div>
@@ -36,13 +36,13 @@
             <div class="col-xs-12 headings">Attachment</div>
             <div class="row" style="padding: 15px;">
                 <br>
-                <button ng-click="open('lg')" style="border: 3px dotted #d3d3d3;border-radius: 3px;color: #d3d3d3 "
+                <button ng-click="ctrl.open('lg')" style="border: 3px dotted #d3d3d3;border-radius: 3px;color: #d3d3d3 "
                         class="btn btn-default"><i
                         class="fa fa-fw fa-plus"></i> ADD
                 </button>
                 <br><br>
 
-                <div class="row" ng-repeat="attachment in model.attachments">
+                <div class="row" ng-repeat="attachment in ctrl.model.attachments">
                     <div class="col-xs-5">
                         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                         <img ng-if="attachment.type === 'sample'" src="assets/img/splash/sample_icon.png"
@@ -51,8 +51,9 @@
                              style="height: 40px;padding-bottom: 10px;">
                         <img ng-if="attachment.type === 'datafile'" src="assets/img/splash/file_icon.png"
                              style="height: 40px;padding-bottom: 10px;">
-                        <a ng-click="openDetails(attachment)" class="link pointer" style="padding-left: 15px;">{{attachment.name}}</a>
-                        <i ng-click="removeAttachment(attachment)" class="fa fa-fw fa-close pull-right pointer"></i>
+                        <a ng-click="ctrl.openDetails(attachment)" class="link pointer" style="padding-left: 15px;">{{attachment.name}}</a>
+                        <i ng-click="ctrl.removeAttachment(attachment)"
+                           class="fa fa-fw fa-close pull-right pointer"></i>
                     </div>
                 </div>
             </div>
@@ -64,7 +65,7 @@
             <div class="row">
                 <div class="col-xs-8">
                     <div class="row"><br>
-                        <input placeholder="Title..." class="form-control" name="title" ng-model="model.title"
+                        <input placeholder="Title..." class="form-control" name="title" ng-model="ctrl.model.title"
                                required/>
 
                         <div ng-if="createReviewForm.$submitted || createReviewForm.title.$touched"
@@ -75,7 +76,7 @@
                     </div>
                     <text-angular ta-toolbar="[['h2', 'h5', 'h6', 'quote','bold','italics','underline'],
                               ['ul','ol', 'justifyLeft', 'insertLink', 'insertImage']]"
-                                  name="comment" ng-model="model.comment" required></text-angular>
+                                  name="comment" ng-model="ctrl.model.comment" required></text-angular>
                     <div ng-if="createReviewForm.$submitted || createReviewForm.comment.$touched"
                          ng-messages="createReviewForm.comment.$error" class="errors">
                         <div ng-message="required">Please fill in your comment</div>
@@ -85,19 +86,21 @@
         </div>
         <div class="row">
             <br>
-            <button ng-click="cancel()" class="btn-details-container btn btn-default btn btn-cancel">Cancel</button>
+            <button ng-click="ctrl.cancel()" class="btn-details-container btn btn-default btn btn-cancel">Cancel
+            </button>
             <span ng-if="createReviewForm.$valid">
-                    <button ng-if="model.attachments.length > 0" ng-click="createReview(createReviewForm.$valid)"
+                    <button ng-if="ctrl.model.attachments.length > 0" ng-click="ctrl.createReview(createReviewForm.$valid)"
                             ng-class="{'btn-inactive': createReviewForm.$valid === false}"
                             class=" btn btn-default btn-review  btn-details-container">Send
                     </button>
-                    <button ng-if="model.attachments.length < 1" ng-click="createReview(createReviewForm.$valid)"
+                    <button ng-if="ctrl.model.attachments.length < 1"
+                            ng-click="ctrl.createReview(createReviewForm.$valid)"
                             ng-class="{'btn-inactive': createReviewForm.$valid === false}"
                             ng-confirm-click="Do you want to continue without attachments?"
                             class=" btn btn-default btn-review  btn-details-container">Send
                     </button>
             </span>
-            <button ng-if="!createReviewForm.$valid" ng-click="createReview(createReviewForm.$valid)"
+            <button ng-if="!createReviewForm.$valid" ng-click="ctrl.createReview(createReviewForm.$valid)"
                     ng-class="{'btn-inactive': createReviewForm.$valid === false}"
                     class=" btn btn-default btn-review  btn-details-container">Send
             </button>
