--- a/website/app/application/core/projects/project/reviews/view.html
+++ b/website/app/application/core/projects/project/reviews/view.html
@@ -14,7 +14,7 @@
                             <i style="color: #C0C0C0" class="fa fa-circle fa-stack-2x"></i>
                             <i style="color: white;" class="fa fa-user fa-stack-1x"></i>
                         </span>
-            <span class="who"> {{review.author}} </span>
+            <span class="who"> {{ctrl.review.author}} </span>
         </div>
 
         <div class="col-xs-5 col-xs-offset-1">
@@ -23,17 +23,17 @@
                             <i style="color: #C0C0C0" class="fa fa-circle fa-stack-2x"></i>
                             <i style="color: white;" class="fa fa-user fa-stack-1x"></i>
                         </span>
-                <span class="who"> {{review.assigned_to[0]}}
-                    <span ng-show="review.assigned_to.length > 1">
+                <span class="who"> {{ctrl.review.assigned_to[0]}}
+                    <span ng-show="ctrl.review.assigned_to.length > 1">
                     and <a ng-click="others = !others">
-                        {{review.assigned_to.length-1}} others
+                        {{ctrl.review.assigned_to.length-1}} others
                     </a>
                     </span>
                 </span>
 
             <div style="padding-left: 40px;" class="row" ng-if="others">
                 <ul class="list-inline">
-                    <li ng-repeat="each_person in review.assigned_to" ng-show="!$first" class="who">
+                    <li ng-repeat="each_person in ctrl.review.assigned_to" ng-show="!$first" class="who">
                         {{each_person}}{{$last ? '' : ',&nbsp;'}}
                     </li>
                 </ul>
@@ -46,7 +46,7 @@
         <div class="col-xs-12">
             <h4 class="text-uppercase section">Attachments</h4>
 
-            <div class="row" ng-repeat="attachment in review.attachments">
+            <div class="row" ng-repeat="attachment in ctrl.review.attachments">
                 <div style="padding-left: 10px;padding-bottom: 20px;line-height: 5px;">
                     <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                     <img ng-if="attachment.type === 'sample'" src="assets/img/splash/sample_icon.png"
@@ -55,7 +55,7 @@
                          style="height: 40px;padding-bottom: 10px;">
                     <img ng-if="attachment.type === 'datafile'" src="assets/img/splash/file_icon.png"
                          style="height: 40px;padding-bottom: 10px;">
-                    <a class="link" style="padding-left: 15px;" ng-click="openDetails(attachment, attachment.type)">{{attachment.name}}</a>
+                    <a class="link" style="padding-left: 15px;" ng-click="ctrl.openDetails(attachment, attachment.type)">{{attachment.name}}</a>
 
                     <p style="padding-left: 80px">
                         <small class="text-muted">{{attachment.path}}</small>
@@ -71,7 +71,7 @@
 
             <div>
                 <ul class="list-group">
-                    <li class="list-group-item" style="border: none;" ng-repeat="message in review.messages">
+                    <li class="list-group-item" style="border: none;" ng-repeat="message in ctrl.review.messages">
                             <span class="fa-stack fa-lg">
                                 <i style="color: #C0C0C0" class="fa fa-circle fa-stack-2x"></i>
                                 <i style="color: white;" class="fa fa-user fa-stack-1x"></i>
@@ -83,13 +83,13 @@
                         <small style="padding-left: 15px;" class="text-muted">{{message.date}}</small>
                     </li>
                 </ul>
-                <div ng-if="review.status === 'open'" class="row">
+                <div ng-if="ctrl.review.status === 'open'" class="row">
                     <div class="col-xs-7">
                             <textarea placeholder="Add a comment..." class="form-control"
-                                      ng-model="model.comment"></textarea>
+                                      ng-model="ctrl.model.comment"></textarea>
                     </div>
                     <div class="col-xs-3">
-                        <button ng-click="addComment()"
+                        <button ng-click="ctrl.addComment()"
                                 class="btn-review  btn-details-container btn btn-default">Comment
                         </button>
                     </div>
@@ -99,8 +99,8 @@
     </div>
 
     <div class="row">
-        <div ng-if="review.status === 'open'" style="padding: 25px;">
-            <i class="fa fa-fw fa-archive fa-lg close-link"></i> <a ng-click="archiveReview()" class="close-link">CLOSE
+        <div ng-if="ctrl.review.status === 'open'" style="padding: 25px;">
+            <i class="fa fa-fw fa-archive fa-lg close-link"></i> <a ng-click="ctrl.archiveReview()" class="close-link">CLOSE
             AND ARCHIVE</a>
         </div>
     </div>
