--- a/website/app/index.html
+++ b/website/app/index.html
@@ -149,6 +149,7 @@
 <script src="application/core/projects/project/processes/transformation-controller.js"></script>
 <script src="application/core/projects/project/processes/link-files-to-sample.js"></script>
 <script src="application/core/projects/project/processes/measurement-controller.js"></script>
+<script src="application/core/projects/project/processes/filter-process-service.js"></script>
 <script src="application/core/projects/project/help/userguide.js"></script>
 <script src="application/core/projects/project/files/files-all-controller.js"></script>
 <script src="application/core/projects/project/files/file-edit-controller.js"></script>
