--- a/website/app/application/core/projects/project/home/home.html
+++ b/website/app/application/core/projects/project/home/home.html
@@ -97,7 +97,7 @@
                     <th>Description</th>
                 </tr>
                 </thead>
-                <tbody >
+                <tbody>
                 <tr ng-repeat="sample in ctrl.project.samples">
                     <td style="width:40%">
                         <b><a ui-sref="projects.project.samples.edit({sample_id: sample.id})">{{sample.name}}</a></b>
@@ -117,7 +117,11 @@
                 </tr>
                 </tbody>
             </table>
+            <div ng-if="ctrl.project.samples.length === 0">
+                -- No Samples --
+            </div>
         </div>
+
         <div class="col-xs-6">
             <div home-calendar project="ctrl.project"></div>
         </div>
