Change from Description.... to just Description

--- a/website/app/application/core/projects/project/processes/view.html
+++ b/website/app/application/core/projects/project/processes/view.html
@@ -25,7 +25,7 @@
         <h4 class="h4custom">Details</h4>
 
         <div class="row">
-            <div class="col-xs-2 text-light no-padding">Description about the process</div>
+            <div class="col-xs-2 text-light no-padding">Description</div>
             <div class="col-xs-10 description">{{view.process.what}}</div>
         </div>
     </div>
