--- a/website/app/application/core/projects/project/samples/edit.html
+++ b/website/app/application/core/projects/project/samples/edit.html
@@ -10,7 +10,7 @@
         <h4 class="h4custom">Details</h4>
 
         <div class="row">
-            <div class="col-xs-2 text-light no-padding">Description about the sample</div>
+            <div class="col-xs-2 text-light no-padding">Description</div>
             <div class="col-xs-10 description">{{ctrl.sample.description}}</div>
         </div>
     </div>
