--- a/website/app/application/core/projects/project/processes/setup.html
+++ b/website/app/application/core/projects/project/processes/setup.html
@@ -12,8 +12,15 @@
         </thead>
         <tbody>
         <tr ng-repeat="property in ctrl.setup.properties">
-            <td style="height: 0px;"> {{property.name}}</td>
-            <td style="height: 0px;">{{property.value}} {{property.unit}}</td>
+            <td style="height: 0;">
+                {{property.name}}
+            </td>
+            <td ng-if="property.value.name" style="height: 0">
+                {{property.value.name}} {{property.unit}}
+            </td>
+            <td ng-if="!property.value.name" style="height: 0;">
+                {{property.value}} {{property.unit}}
+            </td>
         </tr>
         </tbody>
     </table>
